--- a/zero2.html
+++ b/zero2.html
@@ -2,12 +2,12 @@
 <html>
 <body>
 <ul>
-	<li>Coffee</li>
+	<li>咖啡</li>
 	<ul>
-		<li>Espresso</li>
-		<li>Cappuccino</li>
+		<li>濃縮咖啡</li>
+		<li>卡布奇諾</li>
 	</ul>
-	<li>Milk</li>
+	<li>牛奶</li>
 </ul>
 </body>
 </html>
