--- a/zero2.html
+++ b/zero2.html
@@ -7,16 +7,25 @@
 <h1>我喜歡的小說(前五名)</h1>
 <ol>
 	<p>魔戒系列</p>
+	<<a href="https://medium.com/%E8%AE%80%E6%9B%B8e%E8%AA%8C/lord-of-the-ring-%E9%AD%94%E6%88%92-b167d8ba74f4">
 	<td><img src= "1.jpg" width="128" height="128" /></td>
+	</a>
 	<p>波西傑克森系列</p>
+	<a href="https://www.eslite.com/product/1001116172682323962005">
 	<td><img src= "2.jpg" width="128" height="128" /></td>
-	<p>十日終焉</p>
+	</a>
+	<p>十日終焉(網路小說)</p>
+	<a href="https://fanqienovel.com/page/7143038691944959011">
 	<td><img src= "3.jpg" width="128" height="128" /></td>
+	</a>
 	<p>關於我轉生變成史萊姆這檔事</p>
+	<a href="https://www.books.com.tw/products/0010766827">
 	<td><img src= "4.jpg" width="128" height="128" /></td>
+	</a>
 	<p>九把刀 殺手系列</p>
+	<a href="https://www.ruten.com.tw/item/show?22144866351495">
 	<td><img src= "5.jpg" width="128" height="128" /></td>
+	</a>
 </ol>
 </body>
 </html>
-
