--- a/zero2.html
+++ b/zero2.html
@@ -7,7 +7,7 @@
 <h1>我喜歡的小說(前五名)</h1>
 <ol>
 	<p>魔戒系列</p>
-	<<a href="https://medium.com/%E8%AE%80%E6%9B%B8e%E8%AA%8C/lord-of-the-ring-%E9%AD%94%E6%88%92-b167d8ba74f4">
+	<a href="https://medium.com/%E8%AE%80%E6%9B%B8e%E8%AA%8C/lord-of-the-ring-%E9%AD%94%E6%88%92-b167d8ba74f4">
 	<td><img src= "1.jpg" width="128" height="128" /></td>
 	</a>
 	<p>波西傑克森系列</p>
